project(RealmLib)

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost REQUIRED COMPONENTS system date_time filesystem regex thread)

file(GLOB TOP_LEVEL "*.cpp" "*.h")
file(GLOB SRC_EXPORTS "./Exports/*.cpp" "./Exports/*.h")
file(GLOB SRC_PACKETS "./Packets/*.cpp" "./Packets/*.h")
file(GLOB SRC_CLIENT "./Packets/Client/*.cpp" "./Packets/Client/*.h")
file(GLOB SRC_DATAOBJECTS "./Packets/DataObjects/*.cpp" "./Packets/DataObjects/*.h")
file(GLOB SRC_SERVER "./Packets/Server/*.cpp" "./Packets/Server/*.h")
file(GLOB SRC_STRUCTURES "./Structures/*.cpp" "./Structures/*.h")
file(GLOB SRC_UTIL "./Util/*.cpp" "./Util/*.h")
file(GLOB PROJECT_FILES FILES ${TOP_LEVEL} ${SRC_EXPORTS} ${SRC_PACKETS} ${SRC_CLIENT} ${SRC_DATAOBJECTS} ${SRC_SERVER} ${SRC_STRUCTURES} ${SRC_UTIL})

if(MSVC)
    foreach(src_file ${PROJECT_FILES})
        set_source_files_properties(${src_file} PROPERTIES COMPILE_FLAGS "/Yustdafx.h")
    endforeach(src_file ${PROJECT_FILES})
    set_source_files_properties(stdafx.cpp PROPERTIES COMPILE_FLAGS "/Ycstdafx.h")
endif(MSVC)

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS} "../include" ".")
    add_library(RealmLib SHARED ${PROJECT_FILES})
	set_target_properties(RealmLib PROPERTIES RUNTIME_OUTPUT_DIRECTORY "..")
    target_link_libraries(RealmLib ${Boost_LIBRARIES})
endif()

source_group("Exports" FILES ${SRC_EXPORTS})
source_group("Packets" FILES ${SRC_PACKETS})
source_group("Packets\\Client" FILES ${SRC_CLIENT})
source_group("Packets\\DataObjects" FILES ${SRC_DATAOBJECTS})
source_group("Packets\\Server" FILES ${SRC_SERVER})
source_group("Structures" FILES ${SRC_STRUCTURES})
source_group("Util" FILES ${SRC_UTIL})
source_group("" FILES ${TOP_LEVEL})